# xclarity-client

./: .gitignore  README.md  bootstrap  requirements.pip  setup.cfg  test_client.py
xclarityclient/: client.py  exceptions.py
xclarityclient/v1_2_2/: boot_order.py  client.py  power_status.py
