[metadata]
name = xclarity-client
summary = Client library for XClarity REST API
description-file = README.rst
license = Apache License, Version 2.0
author = Finix Lei
author-email = leilei4@lenovo.com


[files]
packages =
    xclarityclient

[entry_points]
console_scripts =
    xclarity = xclarityclient.shell:main
